[gd_scene load_steps=5 format=3 uid="uid://d0w50wqi3fr08"]

[ext_resource type="Script" uid="uid://doxx6jybrnkas" path="res://Script/UIElements/dialogue_box.gd" id="1_endrp"]
[ext_resource type="StyleBox" uid="uid://cb1mljbepunl" path="res://Resources/Themes/dialogue_box.tres" id="2_l25oc"]
[ext_resource type="FontFile" uid="uid://dme1f5mey7scy" path="res://Resources/Fonts/Inter-VariableFont_opsz,wght.ttf" id="3_kyvu4"]

[sub_resource type="LabelSettings" id="LabelSettings_ah5ht"]
line_spacing = 2.0
font = ExtResource("3_kyvu4")
font_size = 32

[node name="DialogueBox" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_endrp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.160034
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_l25oc")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(602, 0)
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_ah5ht")
autowrap_mode = 3

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DialogueTimerAfter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]

[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
